First half of Javadoc Notes